bootstrap and testing page

--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <!-- <meta http-equiv="Refresh" content="0; url=https://ngkjon.github.io/portfolio" /> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styletest.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <title>jonathan ng - home</title>
   </head>
   
@@ -13,38 +15,41 @@
         pronounciation.play();
      }
  </script>
-    <div class=title>jon·a·than ng</div>
-    <div class=phonetic>/ˈʤɒnəθən ing/</div>
-    <div class=audio onclick="play();"><?xml version="1.0" encoding="iso-8859-1"?>
-      <!--Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Capa_1" width=3vh height=3vh xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
-<path d="M278.944,17.577c-5.568-2.656-12.128-1.952-16.928,1.92L106.368,144.009H32c-17.632,0-32,14.368-32,32v128
-  c0,17.664,14.368,32,32,32h74.368l155.616,124.512c2.912,2.304,6.464,3.488,10.016,3.488c2.368,0,4.736-0.544,6.944-1.6
-  c5.536-2.656,9.056-8.256,9.056-14.4v-416C288,25.865,284.48,20.265,278.944,17.577z"/>
-<path d="M368.992,126.857c-6.304-6.208-16.416-6.112-22.624,0.128c-6.208,6.304-6.144,16.416,0.128,22.656
-  C370.688,173.513,384,205.609,384,240.009s-13.312,66.496-37.504,90.368c-6.272,6.176-6.336,16.32-0.128,22.624
-  c3.136,3.168,7.264,4.736,11.36,4.736c4.064,0,8.128-1.536,11.264-4.64C399.328,323.241,416,283.049,416,240.009
-  S399.328,156.777,368.992,126.857z"/>
-<path d="M414.144,81.769c-6.304-6.24-16.416-6.176-22.656,0.096c-6.208,6.272-6.144,16.416,0.096,22.624
-  C427.968,140.553,448,188.681,448,240.009s-20.032,99.424-56.416,135.488c-6.24,6.24-6.304,16.384-0.096,22.656
-  c3.168,3.136,7.264,4.704,11.36,4.704c4.064,0,8.16-1.536,11.296-4.64C456.64,356.137,480,299.945,480,240.009
-  S456.64,123.881,414.144,81.769z"/>
+ <div class="container">
+   <div class="row">
+      <div class="col-xs-12 col-sm-3 h1 nopadding title align-text-bottom">jon·a·than ng</div>
+      <div class="col-xs-8 col-sm-2 h4 nopadding phonetic align-text-bottom">/ˈʤɒnəθən ing/</div>
+      <div class="col-xs-4 col-sm-1 audio nopadding audio align-text-bottom" onclick="play();"><?xml version="1.0" encoding="iso-8859-1"?>
+        <svg version="1.1" id="Capa_1" width=3vh height=3vh xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
+        <path d="M278.944,17.577c-5.568-2.656-12.128-1.952-16.928,1.92L106.368,144.009H32c-17.632,0-32,14.368-32,32v128
+          c0,17.664,14.368,32,32,32h74.368l155.616,124.512c2.912,2.304,6.464,3.488,10.016,3.488c2.368,0,4.736-0.544,6.944-1.6
+          c5.536-2.656,9.056-8.256,9.056-14.4v-416C288,25.865,284.48,20.265,278.944,17.577z"/>
+        <path d="M368.992,126.857c-6.304-6.208-16.416-6.112-22.624,0.128c-6.208,6.304-6.144,16.416,0.128,22.656
+          C370.688,173.513,384,205.609,384,240.009s-13.312,66.496-37.504,90.368c-6.272,6.176-6.336,16.32-0.128,22.624
+          c3.136,3.168,7.264,4.736,11.36,4.736c4.064,0,8.128-1.536,11.264-4.64C399.328,323.241,416,283.049,416,240.009
+          S399.328,156.777,368.992,126.857z"/>
+        <path d="M414.144,81.769c-6.304-6.24-16.416-6.176-22.656,0.096c-6.208,6.272-6.144,16.416,0.096,22.624
+          C427.968,140.553,448,188.681,448,240.009s-20.032,99.424-56.416,135.488c-6.24,6.24-6.304,16.384-0.096,22.656
+          c3.168,3.136,7.264,4.704,11.36,4.704c4.064,0,8.16-1.536,11.296-4.64C456.64,356.137,480,299.945,480,240.009
+          S456.64,123.881,414.144,81.769z"/>
 
-</svg>
-</div>
-    <div class=navbar>
-      <ul>
+        </svg>
+      </div>
+      <!-- <div class="col-xs-12 col-sm-6 ml-auto nopadding my-auto navbar"> -->
+      <ul class="ml-auto navbar">
         <li><a href="https://www.dropbox.com/s/uhxfgsk108odrl5/design3B.pdf">resume</a></li>
         <li><a href="work.html">work</a></li>
         <li><a href="about.html">about</a></li>
       </ul> 
-    </div>
-    <div class=bar></div>
-  	<h2>designer & developer based in toronto
-  	studying at the university of waterloo</h2>
-    <div id="contact">
+    <!-- </div> -->
+  </div>
+  <div class="row">
+    <div class="col-xs-12 bar"></div>
+  </div>
+  <div class="row h1">designer & developer based in toronto</div>
+  <div class="row h1">studying at the university of waterloo</div>
+  <div class="row" id="contact">
                 <ul>
                     <li id="gh">
                         <a href="https://github.com/ngkjon" target="_blank">
@@ -72,7 +77,10 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+    
+  </div>
+ </div>
+    
   </body>
 
 </html>
