--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <!-- <meta http-equiv="Refresh" content="0; url=https://ngkjon.github.io/portfolio" /> -->
+    <meta http-equiv="Refresh" content="0; url=https://ngkjon.webflow.io/" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
@@ -8,79 +8,4 @@
     <title>jonathan ng - home</title>
   </head>
   
-  <body id=home>
-    <!-- <script>
-     var pronounciation = new Audio('pronounciation.mp3');
-     function play() {
-        pronounciation.play();
-     }
- </script> -->
- <div class="container">
-   <div class="row align-self-center">
-      <div class="col-xs-12 col-sm-5 nopadding title align-text-bottom">jonathan ng</div>
-      <!-- <div class="col-xs-8 col-sm-2 h4 nopadding phonetic align-text-bottom">/ˈʤɒnəθən ing/</div>
-      <div class="col-xs-4 col-sm-1 audio nopadding audio align-text-bottom" onclick="play();"><?xml version="1.0" encoding="iso-8859-1"?>
-        <svg version="1.1" id="Capa_1" width=3vh height=3vh xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
-        <path d="M278.944,17.577c-5.568-2.656-12.128-1.952-16.928,1.92L106.368,144.009H32c-17.632,0-32,14.368-32,32v128
-          c0,17.664,14.368,32,32,32h74.368l155.616,124.512c2.912,2.304,6.464,3.488,10.016,3.488c2.368,0,4.736-0.544,6.944-1.6
-          c5.536-2.656,9.056-8.256,9.056-14.4v-416C288,25.865,284.48,20.265,278.944,17.577z"/>
-        <path d="M368.992,126.857c-6.304-6.208-16.416-6.112-22.624,0.128c-6.208,6.304-6.144,16.416,0.128,22.656
-          C370.688,173.513,384,205.609,384,240.009s-13.312,66.496-37.504,90.368c-6.272,6.176-6.336,16.32-0.128,22.624
-          c3.136,3.168,7.264,4.736,11.36,4.736c4.064,0,8.128-1.536,11.264-4.64C399.328,323.241,416,283.049,416,240.009
-          S399.328,156.777,368.992,126.857z"/>
-        <path d="M414.144,81.769c-6.304-6.24-16.416-6.176-22.656,0.096c-6.208,6.272-6.144,16.416,0.096,22.624
-          C427.968,140.553,448,188.681,448,240.009s-20.032,99.424-56.416,135.488c-6.24,6.24-6.304,16.384-0.096,22.656
-          c3.168,3.136,7.264,4.704,11.36,4.704c4.064,0,8.16-1.536,11.296-4.64C456.64,356.137,480,299.945,480,240.009
-          S456.64,123.881,414.144,81.769z"/>
-
-        </svg>
-      </div> -->
-      <!-- <div class="col-xs-12 col-sm-6 ml-auto nopadding my-auto navbar"> -->
-      <ul class="ml-auto navbar">
-        <li><a href="about.html">about</a></li>
-        <li><a href="work.html">work</a></li>
-        <li><a href="https://www.dropbox.com/s/uhxfgsk108odrl5/design3B.pdf">resume</a></li>
-      </ul> 
-    <!-- </div> -->
-  </div>
-  <div class="row">
-    <div class="col-xs-12 nopadding bar"></div>
-  </div>
-  <div class="row text">designer & developer based in toronto studying at the university of waterloo</div>
-  
-  <div class="row" id="contact">
-                <ul>
-                    <li id="gh">
-                        <a href="https://github.com/ngkjon" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=2.5vh height=2.5vh viewBox="0 0 24 24"><path class="social-icon" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" /></svg>
-                        </a>
-                    </li>
-                    <li id="ig" >
-                        <a href="https://www.instagram.com/ng.sta/" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=2.5vh height=2.5vh viewBox="0 0 24 24"><path class="social-icon" d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" /></svg>
-                        </a>
-                    </li>
-                    <li id="li">
-                        <a href="https://linkedin.com/in/ngkjon" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=2.5vh height=2.5vh viewBox="0 0 24 24"><path class="social-icon" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" /></svg>
-                        </a>
-                    </li>
-                    <li id="dr">
-                        <a href="https://dribbble.com/ngkjon" target="_blank">
-                            <svg width=2.5vh height=2.5vh viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path class="social-icon" d="m16.354 23.17c.02-.006.039-.014.059-.021 12.215-4.853 8.836-23.149-4.413-23.149-6.649 0-12 5.42-12 12 0 8.327 8.434 14.269 16.354 11.17zm-11.073-3.111c.852-1.432 3.609-5.472 8.315-6.866.984 2.509 1.674 5.436 1.742 8.755-3.566 1.199-7.327.392-10.057-1.889zm11.532 1.263c-.131-3.189-.782-6.017-1.71-8.467 2.082-.325 4.492-.108 7.225.987-.581 3.261-2.666 6.002-5.515 7.48zm5.672-9.031c-3.01-1.131-5.663-1.272-7.959-.834-.355-.8-.728-1.569-1.123-2.277 3.523-1.407 5.605-3.122 6.537-4.03 1.645 1.904 2.622 4.369 2.545 7.141zm-3.61-8.209c-.848.807-2.845 2.437-6.26 3.77-1.674-2.648-3.464-4.516-4.598-5.562 3.628-1.494 7.812-.856 10.858 1.792zm-12.292-1.059c.856.753 2.735 2.561 4.548 5.357-2.49.802-5.612 1.391-9.409 1.474.604-2.894 2.408-5.346 4.861-6.831zm-5.051 8.337c4.25-.069 7.69-.74 10.409-1.648.376.659.733 1.377 1.076 2.123-4.735 1.508-7.694 5.401-8.827 7.159-1.828-2.04-2.836-4.702-2.658-7.634z"/></svg>
-                        </a>
-                    </li>
-                    <li id="re">
-                        <a id="retext" href="https://www.dropbox.com/s/uhxfgsk108odrl5/design3B.pdf" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=2.5vh height=2.5vh viewBox="0 0 24 24"><path class="social-icon" d="M11.362 2c4.156 0 2.638 6 2.638 6s6-1.65 6 2.457v11.543h-16v-20h7.362zm.827-2h-10.189v24h20v-14.386c0-2.391-6.648-9.614-9.811-9.614zm4.811 13h-10v-1h10v1zm0 2h-10v1h10v-1zm0 3h-10v1h10v-1z" /></svg>
-                        </a>
-                    </li>
-                </ul>
-    
-  </div>
- </div>
-    
-  </body>
-
-</html>
+  </html>
