--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://ngkjon.webflow.io/" />
+    <meta http-equiv="Refresh" content="0; url=https://jng.webflow.io/" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
